# AppImageUpdateNET

./: .editorconfig  .gitignore  .gitmodules  AppImageUpdateNET.sln  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
AppImage/: AppImage.csproj
AppImageUpdateTool/: AppImageUpdateTool.csproj  Program.cs
CSharpWrapper/: .gitignore  CSharpWrapper.csproj  ILogger.cs  Updater.cs
Tests/: CMakeLists.txt  appimagetool-x86_64.AppImage
Tests/UpdaterTests/: UnitTest.cs  UpdaterTests.csproj
src/: Update.i  std_string_ref.i
src/AppImage/: AppImage.csproj
tests/: CMakeLists.txt
tests/SwigConstructorException/: SwigConstructorException.csproj  UnitTest.cs
tests/UpdaterTests/: UnitTest.cs  UpdaterTests.csproj
